--- a/Informacion/financiamiento.html
+++ b/Informacion/financiamiento.html
@@ -2,16 +2,16 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <link rel="manifest" href="site.webmanifest">
   <title>Financiamiento | Ley C.U.R.A.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
-
+  <script src="https://unpkg.com/@phosphor-icons/web"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -33,26 +33,8 @@
       }
     }
   </script>
-
-  <style>
-    body { background-color: #004E85; }
-    .cursor-blink::after {
-      content: '|';
-      animation: blink 1s infinite;
-    }
-    @keyframes blink {
-      0%, 100% { opacity: 1; }
-      50% { opacity: 0; }
-    }
-    .glass-card {
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-    }
-  </style>
 </head>
-<body class="text-white font-sans selection:bg-cura-accent selection:text-cura-primaryDark">
-
+<body class="font-sans bg-cura-primary text-white overflow-x-hidden flex flex-col min-h-screen">
 
   <header class="sticky top-0 z-30 bg-cura-primaryDark text-white border-b border-cura-accent/40 shadow-sm">
     <div class="max-w-5xl mx-auto px-4 py-3 flex flex-col sm:flex-row gap-3 sm:gap-4 sm:items-center sm:justify-between">
@@ -64,74 +46,105 @@
         </div>
       </div>
       <nav class="flex items-center gap-6 text-sm font-medium">
-          <a href="/Informacion/informacion.html" class="group text-cura-accentLight hover:text-white transition-all duration-300 flex items-center gap-1 hover:-translate-y-0.5">
-        <span class="transition-transform duration-300 group-hover:-translate-x-1 font-bold text-lg">←</span> Volver</a>
-        <a href="https://www.leycura.org/#sumate" class="text-cura-accentLight hover:text-white transition-colors uppercase font-bold nav-scroll-link">Sumarme</a>
+        <a href="/Informacion/informacion.html" class="group text-cura-accentLight hover:text-white transition-all duration-300 flex items-center gap-1 hover:-translate-y-0.5">
+          <span class="transition-transform duration-300 group-hover:-translate-x-1 font-bold text-lg">←</span> Volver
+        </a>
         <a href="/demo.html" class="bg-cura-accent text-cura-primaryDark px-4 py-1.5 rounded-full text-xs font-bold hover:bg-white transition">Demostración</a>
       </nav>
     </div>
   </header>
 
-  <main class="max-w-4xl mx-auto px-6 py-12 md:py-20">
+  <main class="max-w-5xl mx-auto px-6 py-12">
     <nav class="mb-8 flex items-center gap-2 text-sm text-cura-accentLight">
-      <a href="/Informacion/informacion" class="hover:underline">Información</a>
+      <a href="/Informacion/informacion" class="hover:underline text-cura-accentLight">Información</a>
       <span>/</span>
-      <span class="text-white">Financiamiento Sostenible</span>
+      <span class="text-white font-semibold">Financiamiento Sostenible</span>
     </nav>
 
-    <div class="glass-card rounded-3xl p-8 md:p-12 shadow-2xl">
-      <h1 class="text-3xl md:text-5xl font-extrabold mb-8 bg-clip-text text-transparent bg-gradient-to-r from-white to-cura-accentLight">
+    <div class="mb-12">
+      <h1 class="text-3xl md:text-5xl font-extrabold mb-4 bg-clip-text text-transparent bg-gradient-to-r from-white to-cura-accentLight">
         Financiamiento
       </h1>
+      <p class="text-cura-accentLight max-w-2xl">
+        Modelo de sostenibilidad basado en la eficiencia operativa, la neutralidad fiscal y la reinversión estratégica del ahorro estatal.
+      </p>
+    </div>
 
-      <div class="prose prose-invert max-w-none">
-        <p id="typewriter-text" class="whitespace-pre-wrap text-sm md:text-base text-white leading-relaxed cursor-blink"></p>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+      
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-scales text-cura-accent text-2xl"></i>
+          1. Neutralidad Fiscal
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          El sistema se rige por el principio de <strong>Neutralidad Fiscal</strong>, lo que significa que no se crean nuevos impuestos ni cargas obligatorias. La sostenibilidad se garantiza mediante la creación del <strong>Fondo de Inversión Inicial para la Salud Digital (FIISD)</strong>, priorizando la reasignación estratégica de recursos preexistentes.
+        </p>
       </div>
 
-      <div class="mt-12 pt-8 border-t border-white/10 flex flex-col sm:flex-row items-center justify-between gap-6">
-        <p class="text-cura-accentLight text-sm italic">Neutralidad fiscal y eficiencia operativa.</p>
-        <div class="flex gap-4">
-          <a href="/Informacion/implementacion-tecnica" class="flex items-center gap-2 text-sm font-semibold hover:text-cura-accent transition">
-            Siguiente: Implementación Técnica
-            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/></svg>
-          </a>
-        </div>
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-arrows-merge text-cura-accent text-2xl"></i>
+          2. Reasignación Estratégica
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          Se reasignará no menos del <strong>20% de las partidas presupuestarias</strong> de "Servicios Informáticos" y programas de salud digital dispersos. El desarrollo utiliza obligatoriamente la infraestructura soberana de <strong>ARSAT</strong> y la capacidad técnica de la Secretaría de Innovación Pública, eliminando costos externos.
+        </p>
       </div>
+
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-chart-line-up text-cura-accent text-2xl"></i>
+          3. Auditoría y Reinversión
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          Los ahorros operativos anuales generados por la eliminación de papel y reducción de fraudes en <strong>PAMI</strong> serán cuantificados por la <strong>SIGEN</strong>. Dichos excedentes serán <strong>auditados y reinvertidos en un 100%</strong> en mantenimiento de la red nacional, ciberseguridad y hospitales públicos.
+        </p>
+      </div>
+
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-hand-coins text-cura-accent text-2xl"></i>
+          4. Padrinazgo Tecnológico
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          Se crea un marco para que empresas privadas financien la modernización de hospitales públicos. Los <strong>"Padrinos Tecnológicos"</strong> obtienen beneficios fiscales y el sello de <strong>"Empresa Protectora de la Salud Pública"</strong>, permitiendo inversión privada sin comprometer la soberanía de los datos.
+        </p>
+      </div>
+
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-brain text-cura-accent text-2xl"></i>
+          5. Alianzas e I+D (IA)
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          Habilita acuerdos con tecnológicas para entrenamiento de algoritmos con <strong>datasets anonimizados</strong>. A cambio, el Estado obtiene licenciamiento gratuito y perpetuo de las herramientas de <strong>Inteligencia Artificial</strong> resultantes para su uso en el sistema público.
+        </p>
+      </div>
+
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-globe text-cura-accent text-2xl"></i>
+          6. Proyección Internacional
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          Se autoriza la captación de créditos específicos (BID/Banco Mundial) y se faculta a la autoridad para <strong>exportar servicios de asistencia técnica</strong>, posicionando a la Argentina como un Hub Global de interoperabilidad capaz de generar divisas para el sistema.
+        </p>
+      </div>
+
+    </div>
+
+    <div class="mt-12 pt-8 border-t border-white/10 flex flex-col sm:flex-row items-center justify-between gap-6 text-center sm:text-left">
+      <p class="text-cura-accentLight text-sm italic">Neutralidad fiscal y eficiencia operativa.</p>
+      <a href="/Informacion/implementacion-tecnica" class="flex items-center gap-2 text-sm font-semibold text-cura-accent hover:text-white transition">
+        Siguiente: Implementación Técnica
+        <i class="ph-bold ph-arrow-right"></i>
+      </a>
     </div>
   </main>
 
-  <footer class="py-12 border-t border-white/10 text-center">
-    <p class="text-sm text-white/40">Copyright © 2025 C.U.R.A. - Todos los derechos reservados.</p>
+  <footer class="py-12 border-t border-white/10 text-center mt-auto">
+    <p class="text-sm text-white/40">Copyright © 2026 C.U.R.A. - Todos los derechos reservados.</p>
   </footer>
-
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const textElement = document.getElementById('typewriter-text');
-      
-      const textToType = `<strong>1. Principio de Máxima Eficiencia y Neutralidad Fiscal:</strong> El sistema se rige por el principio de <strong>Neutralidad Fiscal</strong>, lo que significa que no se crean nuevos impuestos ni cargas obligatorias. La sostenibilidad se garantiza mediante la creación del <strong>Fondo de Inversión Inicial para la Salud Digital (FIISD)</strong>, priorizando la reasignación estratégica de recursos preexistentes sobre la generación de nueva erogación.<br><br><strong>2. Reasignación Estratégica y Optimización:</strong> Se reasignará no menos del <strong>20% de las partidas presupuestarias</strong> de "Servicios Informáticos" y programas de salud digital dispersos (SNVS, Ley 27.553) al sistema unificado. El desarrollo utiliza obligatoriamente la infraestructura soberana de <strong>ARSAT</strong> (REFEFO y satélites) y la capacidad técnica de la <strong>Secretaría de Innovación Pública</strong>, eliminando costos de servidores y licencias externas.<br><br><strong>3. Auditoría de Ahorro y Reinversión Total:</strong> Los ahorros operativos anuales generados por la eliminación de recetas en papel, la reducción de fraudes en el <strong>PAMI</strong> y la desaparición de estudios duplicados serán cuantificados por la <strong>SIGEN</strong>. Dichos excedentes no irán a rentas generales, sino que serán <strong>auditados y reinvertidos en un 100%</strong> en el mantenimiento de la red nacional, ciberseguridad y fortalecimiento de hospitales públicos.<br><br><strong>4. Régimen de Padrinazgo Tecnológico y Mecenazgo:</strong> Se crea un marco para que empresas privadas financien la modernización y conectividad de establecimientos de salud públicos. Los <strong>"Padrinos Tecnológicos"</strong> obtienen beneficios fiscales (deducción en Ganancias), reconocimiento institucional y el sello de <strong>"Empresa Protectora de la Salud Pública"</strong>, permitiendo la inversión privada directa sin comprometer la soberanía de los datos.<br><br><strong>5. Alianzas Estratégicas e I+D (Dividendo de IA):</strong> La ley habilita acuerdos con tecnológicas globales para el entrenamiento de algoritmos utilizando <strong>datasets anonimizados</strong>. A cambio, el Estado Argentino obtiene licenciamiento gratuito y perpetuo de las herramientas de <strong>Inteligencia Artificial</strong> resultantes para su uso en el sistema público, garantizando acceso soberano a la medicina predictiva.<br><br><strong>6. Financiamiento Internacional y Proyección Global:</strong> Se autoriza la captación de créditos específicos (BID/Banco Mundial) para modernización estatal y se faculta a la autoridad para <strong>exportar servicios de asistencia técnica y consultoría</strong>, posicionando a la Argentina como un Hub Global de interoperabilidad capaz de generar divisas para el propio sistema.`;
-
-      let i = 0;
-      const speed = 5; 
-
-      function typeWriter() {
-        if (i < textToType.length) {
-          if (textToType.charAt(i) === '<') {
-            let endTag = textToType.indexOf('>', i);
-            if (endTag !== -1) {
-              i = endTag + 1;
-            }
-          } else {
-            i++;
-          }
-          textElement.innerHTML = textToType.substring(0, i);
-          setTimeout(typeWriter, speed);
-        } else {
-          textElement.classList.remove('cursor-blink');
-        }
-      }
-
-      setTimeout(typeWriter, 500);
-    });
-  </script>
 </body>
 </html>
