--- a/Informacion/implementacion-tecnica.html
+++ b/Informacion/implementacion-tecnica.html
@@ -2,16 +2,16 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <link rel="manifest" href="site.webmanifest">
   <title>Implementación Técnica | Ley C.U.R.A.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
-
+  <script src="https://unpkg.com/@phosphor-icons/web"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -33,26 +33,8 @@
       }
     }
   </script>
-
-  <style>
-    body { background-color: #004E85; }
-    .cursor-blink::after {
-      content: '|';
-      animation: blink 1s infinite;
-    }
-    @keyframes blink {
-      0%, 100% { opacity: 1; }
-      50% { opacity: 0; }
-    }
-    .glass-card {
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-    }
-  </style>
 </head>
-<body class="text-white font-sans selection:bg-cura-accent selection:text-cura-primaryDark">
-
+<body class="font-sans bg-cura-primary text-white overflow-x-hidden flex flex-col min-h-screen">
 
   <header class="sticky top-0 z-30 bg-cura-primaryDark text-white border-b border-cura-accent/40 shadow-sm">
     <div class="max-w-5xl mx-auto px-4 py-3 flex flex-col sm:flex-row gap-3 sm:gap-4 sm:items-center sm:justify-between">
@@ -64,74 +46,115 @@
         </div>
       </div>
       <nav class="flex items-center gap-6 text-sm font-medium">
-          <a href="/Informacion/informacion.html" class="group text-cura-accentLight hover:text-white transition-all duration-300 flex items-center gap-1 hover:-translate-y-0.5">
-        <span class="transition-transform duration-300 group-hover:-translate-x-1 font-bold text-lg">←</span> Volver</a>
-        <a href="https://www.leycura.org/#sumate" class="text-cura-accentLight hover:text-white transition-colors uppercase font-bold nav-scroll-link">Sumarme</a>
+        <a href="/Informacion/informacion.html" class="group text-cura-accentLight hover:text-white transition-all duration-300 flex items-center gap-1 hover:-translate-y-0.5">
+          <span class="transition-transform duration-300 group-hover:-translate-x-1 font-bold text-lg">←</span> Volver
+        </a>
         <a href="/demo.html" class="bg-cura-accent text-cura-primaryDark px-4 py-1.5 rounded-full text-xs font-bold hover:bg-white transition">Demostración</a>
       </nav>
     </div>
   </header>
 
-  <main class="max-w-4xl mx-auto px-6 py-12 md:py-20">
+  <main class="max-w-5xl mx-auto px-6 py-12">
     <nav class="mb-8 flex items-center gap-2 text-sm text-cura-accentLight">
-      <a href="/Informacion/informacion" class="hover:underline">Información</a>
+      <a href="/Informacion/informacion" class="hover:underline text-cura-accentLight">Información</a>
       <span>/</span>
-      <span class="text-white">Implementación Técnica</span>
+      <span class="text-white font-semibold">Implementación Técnica</span>
     </nav>
 
-    <div class="glass-card rounded-3xl p-8 md:p-12 shadow-2xl">
-      <h1 class="text-3xl md:text-5xl font-extrabold mb-8 bg-clip-text text-transparent bg-gradient-to-r from-white to-cura-accentLight">
+    <div class="mb-12">
+      <h1 class="text-3xl md:text-5xl font-extrabold mb-4 bg-clip-text text-transparent bg-gradient-to-r from-white to-cura-accentLight">
         Implementación Técnica
       </h1>
+      <p class="text-cura-accentLight max-w-2xl">
+        Arquitectura nacional de alta disponibilidad, soberana e inmutable para la seguridad de los datos sanitarios.
+      </p>
+    </div>
 
-      <div class="prose prose-invert max-w-none">
-        <p id="typewriter-text" class="whitespace-pre-wrap text-sm md:text-base text-white leading-relaxed cursor-blink"></p>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+      
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-cloud-arrow-up text-cura-accent text-2xl"></i>
+          1. Arquitectura de "Hardware Cero"
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          El sistema opera bajo un modelo de <strong>Cliente Liviano (Thin Client)</strong>, permitiendo que cualquier hospital funcione con total capacidad desde un navegador web estándar. Esto elimina servidores locales costosos, centralizando el procesamiento en la <strong>Cloud Sanitaria Nacional (Cloud-H)</strong> alojada en los nodos soberanos de <strong>ARSAT</strong>.
+        </p>
       </div>
 
-      <div class="mt-12 pt-8 border-t border-white/10 flex flex-col sm:flex-row items-center justify-between gap-6">
-        <p class="text-cura-accentLight text-sm italic">Arquitectura nacional, soberana e inmutable.</p>
-        <div class="flex gap-4">
-          <a href="/Informacion/beneficios" class="flex items-center gap-2 text-sm font-semibold hover:text-cura-accent transition">
-            Siguiente: Beneficios
-            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/></svg>
-          </a>
-        </div>
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-cube text-cura-accent text-2xl"></i>
+          2. Trazabilidad por Blockchain
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          C.U.R.A. integra una capa de <strong>Blockchain Gubernamental</strong> para el registro de auditoría. Cada acceso o modificación genera un hash inmutable que garantiza transparencia total. Esto impide alteraciones retroactivas, permitiendo auditorías forenses con validez legal absoluta por un periodo de 10 años.
+        </p>
       </div>
+
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-cpu text-cura-accent text-2xl"></i>
+          3. Inteligencia Artificial Soberana
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          Se implementan módulos de <strong>IA Predictiva</strong> entrenados localmente con datos anonimizados. Esta tecnología asiste en el soporte de diagnóstico clínico y actúa como un motor de <strong>Vigilancia Epidemiológica Proactiva</strong>, detectando patrones o brotes en tiempo real para el beneficio público estatal.
+        </p>
+      </div>
+
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-intersect text-cura-accent text-2xl"></i>
+          4. Interoperabilidad Universal
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          El sistema eleva a estándar obligatorio los protocolos internacionales <strong>HL7 FHIR y SNOMED CT</strong>. Mediante una arquitectura de <strong>APIs de Alta Velocidad</strong>, funciona como un bus de datos federal que conecta sistemas preexistentes de provincias, obras sociales y laboratorios.
+        </p>
+      </div>
+
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-qr-code text-cura-accent text-2xl"></i>
+          5. Tokenización y Seguridad
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          La identidad del paciente se protege mediante <strong>Tokenización y QR Dinámico</strong>. Los datos sensibles se encriptan de extremo a extremo, y cada ciudadano dispone de un <strong>Panel de Transparencia</strong> para auditar quién accedió a su información, con capacidad de revocar permisos instantáneamente.
+        </p>
+      </div>
+
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-wifi-slash text-cura-accent text-2xl"></i>
+          6. Resiliencia y Modo Offline
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          Garantiza continuidad mediante un <strong>Módulo de Resiliencia</strong> para zonas con conectividad intermitente. Permite la atención y carga de datos sin internet; una vez restablecido el vínculo, el sistema realiza una sincronización segura y automática con la historia clínica nacional.
+        </p>
+      </div>
+
+      <div class="md:col-span-2 bg-cura-card rounded-2xl border border-cura-accent/40 p-8 shadow-xl transition-all duration-300 hover:border-cura-accent hover:-translate-y-1">
+        <h3 class="text-xl font-bold text-white mb-4 flex items-center gap-3">
+          <i class="ph-bold ph-shield-checkered text-cura-accent text-3xl"></i>
+          7. Ciberdefensa Activa y CSIRT-C.U.R.A.
+        </h3>
+        <p class="text-sm md:text-base text-cura-accentLight leading-relaxed">
+          La infraestructura crítica está protegida 24/7 por el <strong>CSIRT-C.U.R.A.</strong>, un equipo especializado en ciberseguridad sanitaria. Se aplican protocolos de defensa proactiva contra amenazas externas y encriptación de grado militar, asegurando que la información médica de los argentinos sea el activo mejor custodiado de la Nación.
+        </p>
+      </div>
+
+    </div>
+
+    <div class="mt-12 pt-8 border-t border-white/10 flex flex-col sm:flex-row items-center justify-between gap-6 text-center sm:text-left">
+      <p class="text-cura-accentLight text-sm italic">Arquitectura nacional, soberana e inmutable.</p>
+      <a href="/Informacion/beneficios" class="flex items-center gap-2 text-sm font-semibold text-cura-accent hover:text-white transition">
+        Siguiente: Beneficios
+        <i class="ph-bold ph-arrow-right"></i>
+      </a>
     </div>
   </main>
 
-  <footer class="py-12 border-t border-white/10 text-center">
-    <p class="text-sm text-white/40">Copyright © 2025 C.U.R.A. - Todos los derechos reservados.</p>
+  <footer class="py-12 border-t border-white/10 text-center mt-auto">
+    <p class="text-sm text-white/40">Copyright © 2026 C.U.R.A. - Todos los derechos reservados.</p>
   </footer>
-
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const textElement = document.getElementById('typewriter-text');
-      
-      const textToType = `<strong>1. Arquitectura de "Hardware Cero" y Cloud Sanitaria (Cloud-H):</strong> El sistema opera bajo un modelo de <strong>Cliente Liviano (Thin Client)</strong>, permitiendo que cualquier hospital o centro de salud funcione con total capacidad desde un navegador web estándar. Esto elimina la necesidad de servidores locales costosos, centralizando el procesamiento en la <strong>Cloud Sanitaria Nacional (Cloud-H)</strong> alojada de forma redundante en los nodos soberanos de <strong>ARSAT</strong>.<br><br><strong>2. Trazabilidad Inmutable mediante Blockchain:</strong> C.U.R.A. integra una capa de <strong>Blockchain Gubernamental</strong> para el registro de auditoría. Cada acceso, consulta o modificación de un dato clínico genera un hash inmutable que garantiza la transparencia total. Esto impide cualquier alteración retroactiva de los registros de acceso, permitiendo auditorías forenses con validez legal absoluta por un periodo de 10 años.<br><br><strong>3. Inteligencia Artificial Soberana (IA-C.U.R.A.):</strong> Se implementan módulos de <strong>IA Predictiva</strong> entrenados localmente con datos anonimizados. Esta tecnología asiste en el soporte de diagnóstico clínico y actúa como un motor de <strong>Vigilancia Epidemiológica Proactiva</strong>, detectando patrones sanitarios o brotes en tiempo real, garantizando que el "dividendo de inteligencia" permanezca como un bien público estatal.<br><br><strong>4. Interoperabilidad Universal y Bus Federal:</strong> El sistema eleva a estándar de cumplimiento obligatorio los protocolos internacionales <strong>HL7 FHIR y SNOMED CT</strong>. Mediante una arquitectura de <strong>APIs de Alta Velocidad</strong>, C.U.R.A. funciona como un bus de datos federal que conecta sistemas preexistentes de provincias, obras sociales y laboratorios, logrando que diferentes plataformas hablen el mismo idioma técnico.<br><br><strong>5. Tokenización y Seguridad por Diseño:</strong> La identidad del paciente se protege mediante <strong>Tokenización y QR Dinámico</strong> en la Credencial Única de Salud (C.U.S.). Los datos sensibles se encriptan de extremo a extremo, y cada ciudadano dispone de un <strong>Panel de Transparencia</strong> para auditar en tiempo real quién accedió a su información, con la capacidad de revocar permisos de forma instantánea.<br><br><strong>6. Resiliencia y Modo Offline Inteligente:</strong> El sistema garantiza la continuidad operativa mediante un <strong>Módulo de Resiliencia</strong> para zonas con conectividad intermitente. Esto permite la atención médica y la carga de datos sin conexión a internet; una vez restablecido el vínculo, el sistema realiza una sincronización segura y automática para mantener la integridad de la historia clínica nacional.<br><br><strong>7. Ciberdefensa Activa y CSIRT-C.U.R.A.:</strong> La infraestructura crítica está protegida 24/7 por el <strong>CSIRT-C.U.R.A.</strong>, un equipo especializado en ciberseguridad sanitaria. Se aplican protocolos de defensa proactiva contra amenazas externas y encriptación de grado militar, asegurando que la información médica de los argentinos sea el activo mejor custodiado de la Nación.`;
-
-      let i = 0;
-      const speed = 5; 
-
-      function typeWriter() {
-        if (i < textToType.length) {
-          if (textToType.charAt(i) === '<') {
-            let endTag = textToType.indexOf('>', i);
-            if (endTag !== -1) {
-              i = endTag + 1;
-            }
-          } else {
-            i++;
-          }
-          textElement.innerHTML = textToType.substring(0, i);
-          setTimeout(typeWriter, speed);
-        } else {
-          textElement.classList.remove('cursor-blink');
-        }
-      }
-
-      setTimeout(typeWriter, 500);
-    });
-  </script>
 </body>
 </html>
