--- a/Informacion/infraestructura.html
+++ b/Informacion/infraestructura.html
@@ -2,16 +2,16 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <link rel="manifest" href="site.webmanifest">
   <title>Infraestructura | Ley C.U.R.A.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
-
+  <script src="https://unpkg.com/@phosphor-icons/web"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -33,26 +33,8 @@
       }
     }
   </script>
-
-  <style>
-    body { background-color: #004E85; }
-    .cursor-blink::after {
-      content: '|';
-      animation: blink 1s infinite;
-    }
-    @keyframes blink {
-      0%, 100% { opacity: 1; }
-      50% { opacity: 0; }
-    }
-    .glass-card {
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-    }
-  </style>
 </head>
-<body class="text-white font-sans selection:bg-cura-accent selection:text-cura-primaryDark">
-
+<body class="font-sans bg-cura-primary text-white overflow-x-hidden flex flex-col min-h-screen">
 
   <header class="sticky top-0 z-30 bg-cura-primaryDark text-white border-b border-cura-accent/40 shadow-sm">
     <div class="max-w-5xl mx-auto px-4 py-3 flex flex-col sm:flex-row gap-3 sm:gap-4 sm:items-center sm:justify-between">
@@ -64,74 +46,85 @@
         </div>
       </div>
       <nav class="flex items-center gap-6 text-sm font-medium">
-          <a href="/Informacion/informacion.html" class="group text-cura-accentLight hover:text-white transition-all duration-300 flex items-center gap-1 hover:-translate-y-0.5">
-        <span class="transition-transform duration-300 group-hover:-translate-x-1 font-bold text-lg">←</span> Volver</a>
-        <a href="https://www.leycura.org/#sumate" class="text-cura-accentLight hover:text-white transition-colors uppercase font-bold nav-scroll-link">Sumarme</a>
+        <a href="/Informacion/informacion.html" class="group text-cura-accentLight hover:text-white transition-all duration-300 flex items-center gap-1 hover:-translate-y-0.5">
+          <span class="transition-transform duration-300 group-hover:-translate-x-1 font-bold text-lg">←</span> Volver
+        </a>
         <a href="/demo.html" class="bg-cura-accent text-cura-primaryDark px-4 py-1.5 rounded-full text-xs font-bold hover:bg-white transition">Demostración</a>
       </nav>
     </div>
   </header>
 
-  <main class="max-w-4xl mx-auto px-6 py-12 md:py-20">
+  <main class="max-w-5xl mx-auto px-6 py-12">
     <nav class="mb-8 flex items-center gap-2 text-sm text-cura-accentLight">
-      <a href="/Informacion/informacion" class="hover:underline">Información</a>
+      <a href="/Informacion/informacion" class="hover:underline text-cura-accentLight">Información</a>
       <span>/</span>
-      <span class="text-white">Infraestructura Nacional</span>
+      <span class="text-white font-semibold">Infraestructura Nacional</span>
     </nav>
 
-    <div class="glass-card rounded-3xl p-8 md:p-12 shadow-2xl">
-      <h1 class="text-3xl md:text-5xl font-extrabold mb-8 bg-clip-text text-transparent bg-gradient-to-r from-white to-cura-accentLight">
+    <div class="mb-12">
+      <h1 class="text-3xl md:text-5xl font-extrabold mb-4 bg-clip-text text-transparent bg-gradient-to-r from-white to-cura-accentLight">
         Infraestructura Nacional
       </h1>
+      <p class="text-cura-accentLight max-w-2xl">
+        Resiliencia, soberanía y disponibilidad continua mediante el respaldo de la infraestructura tecnológica estatal.
+      </p>
+    </div>
 
-      <div class="prose prose-invert max-w-none">
-        <p id="typewriter-text" class="whitespace-pre-wrap text-sm md:text-base text-white leading-relaxed cursor-blink"></p>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+      
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-hard-drives text-cura-accent text-2xl"></i>
+          1. Nodos Soberanos de ARSAT
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          La infraestructura física reside en el corazón tecnológico de la Nación. Se utilizan los centros de datos de <strong>ARSAT</strong> (nodos de Benavídez y Bariloche) para garantizar que la información sensible nunca salga de jurisdicción argentina, cumpliendo con los máximos estándares de <strong>Seguridad de Grado Nacional</strong>.
+        </p>
       </div>
 
-      <div class="mt-12 pt-8 border-t border-white/10 flex flex-col sm:flex-row items-center justify-between gap-6">
-        <p class="text-cura-accentLight text-sm italic">Resiliencia, soberanía y disponibilidad continua.</p>
-        <div class="flex gap-4">
-          <a href="/Informacion/etapas" class="flex items-center gap-2 text-sm font-semibold hover:text-cura-accent transition">
-            Siguiente: Implementación por Etapas
-            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/></svg>
-          </a>
-        </div>
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-shield-checkered text-cura-accent text-2xl"></i>
+          2. Alta Disponibilidad y Redundancia
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          El sistema está diseñado con una arquitectura de <strong>Alta Disponibilidad (Tier III+)</strong>. Esto significa que existen múltiples respaldos activos: si un nodo falla, el sistema conmuta automáticamente al siguiente sin pérdida de servicio, asegurando que el acceso a la historia clínica sea posible las 24 horas, los 365 días del año.
+        </p>
       </div>
+
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-cube text-cura-accent text-2xl"></i>
+          3. Blockchain para la Integridad de Datos
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          Se integra una capa de <strong>Blockchain Gubernamental</strong> para blindar los registros. Cada vez que se genera una transacción médica, se crea un registro inmutable. Esto garantiza que nadie pueda alterar el historial de accesos o la información del paciente, otorgando seguridad jurídica y técnica absoluta.
+        </p>
+      </div>
+
+      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+          <i class="ph-bold ph-broadcast text-cura-accent text-2xl"></i>
+          4. Conectividad Federal (REFEFO)
+        </h3>
+        <p class="text-sm text-cura-accentLight leading-relaxed">
+          El sistema aprovecha la <strong>Red Federal de Fibra Óptica (REFEFO)</strong> para llegar a cada rincón del país. En zonas remotas, la conectividad se garantiza mediante los <strong>satélites ARSAT</strong>, asegurando que la salud digital sea un derecho federal efectivo y no solo un beneficio para las grandes ciudades.
+        </p>
+      </div>
+
+    </div>
+
+    <div class="mt-12 pt-8 border-t border-white/10 flex flex-col sm:flex-row items-center justify-between gap-6 text-center sm:text-left">
+      <p class="text-cura-accentLight text-sm italic">Resiliencia, soberanía y disponibilidad continua.</p>
+      <a href="/Informacion/roadmap.html" class="flex items-center gap-2 text-sm font-semibold text-cura-accent hover:text-white transition">
+        Siguiente: Implementación por Etapas
+        <i class="ph-bold ph-arrow-right"></i>
+      </a>
     </div>
   </main>
 
-  <footer class="py-12 border-t border-white/10 text-center">
-    <p class="text-sm text-white/40">Copyright © 2025 C.U.R.A. - Todos los derechos reservados.</p>
+  <footer class="py-12 border-t border-white/10 text-center mt-auto">
+    <p class="text-sm text-white/40">Copyright © 2026 C.U.R.A. - Todos los derechos reservados.</p>
   </footer>
-
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const textElement = document.getElementById('typewriter-text');
-      
-      const textToType = `<strong>1. Nodos Soberanos de ARSAT:</strong> La infraestructura física reside en el corazón tecnológico de la Nación. Se utilizan los centros de datos de <strong>ARSAT</strong> (nodos de Benavídez y Bariloche) para garantizar que la información sensible nunca salga de jurisdicción argentina, cumpliendo con los máximos estándares de <strong>Seguridad de Grado Nacional</strong>.<br><br><strong>2. Alta Disponibilidad y Redundancia:</strong> El sistema está diseñado con una arquitectura de <strong>Alta Disponibilidad (Tier III+)</strong>. Esto significa que existen múltiples respaldos activos: si un nodo falla, el sistema conmuta automáticamente al siguiente sin pérdida de servicio, asegurando que el acceso a la historia clínica sea posible las 24 horas, los 365 días del año.<br><br><strong>3. Blockchain para la Integridad de Datos:</strong> Se integra una capa de <strong>Blockchain Gubernamental</strong> para blindar los registros. Cada vez que se genera una transacción médica, se crea un registro inmutable. Esto garantiza que nadie pueda alterar el historial de accesos o la información del paciente, otorgando seguridad jurídica y técnica absoluta.<br><br><strong>4. Conectividad Federal (REFEFO):</strong> El sistema aprovecha la <strong>Red Federal de Fibra Óptica (REFEFO)</strong> para llegar a cada rincón del país. En zonas remotas, la conectividad se garantiza mediante los <strong>satélites ARSAT</strong>, asegurando que la salud digital sea un derecho federal efectivo y no solo un beneficio para las grandes ciudades.`;
-
-      let i = 0;
-      const speed = 5; 
-
-      function typeWriter() {
-        if (i < textToType.length) {
-          if (textToType.charAt(i) === '<') {
-            let endTag = textToType.indexOf('>', i);
-            if (endTag !== -1) {
-              i = endTag + 1;
-            }
-          } else {
-            i++;
-          }
-          textElement.innerHTML = textToType.substring(0, i);
-          setTimeout(typeWriter, speed);
-        } else {
-          textElement.classList.remove('cursor-blink');
-        }
-      }
-
-      setTimeout(typeWriter, 500);
-    });
-  </script>
 </body>
 </html>
